syntax = "proto3";

option java_package = "com.windy.codepractice.grpclib";
option java_outer_classname = "EntityOuterClass";

service EntityDemo {
    rpc EntityByName ( EntityRep) returns ( EntityReply) {}
}

message EntityReply {
    int64 id = 1;
    int32 age = 2;
    string userName = 3;
}

message EntityRep{
    string userName =1;
}

